migrate.log
rake aborted!
SyntaxError: /home/nitrous/piggybank/db/migrate/20151111141036_add_confirmable_to_devise.rb:3: syntax error, unexpected ':', expecting keyword_end
    add_column :users :confirmation_token :string 
                       ^
/home/nitrous/piggybank/db/migrate/20151111141036_add_confirmable_to_devise.rb:4: syntax error, unexpected ':', expecting keyword_end
    add_column :users :confirmed_at :datetime
                       ^
/home/nitrous/piggybank/db/migrate/20151111141036_add_confirmable_to_devise.rb:5: syntax error, unexpected ':', expecting keyword_end
    add_column :users :confirmation_sent_at :datetime
                       ^
/home/nitrous/piggybank/db/migrate/20151111141036_add_confirmable_to_devise.rb:6: syntax error, unexpected ':', expecting keyword_end
    add_column :users :unconfirmed_email :string
                       ^
/home/nitrous/piggybank/.bundle/gems/activesupport-4.2.3/lib/active_support/dependencies.rb:274:in `require'
/home/nitrous/piggybank/.bundle/gems/activesupport-4.2.3/lib/active_support/dependencies.rb:274:in `block in require'
/home/nitrous/piggybank/.bundle/gems/activesupport-4.2.3/lib/active_support/dependencies.rb:240:in `load_dependency'
/home/nitrous/piggybank/.bundle/gems/activesupport-4.2.3/lib/active_support/dependencies.rb:274:in `require'
/home/nitrous/piggybank/.bundle/gems/activerecord-4.2.3/lib/active_record/migration.rb:773:in `load_migration'
/home/nitrous/piggybank/.bundle/gems/activerecord-4.2.3/lib/active_record/migration.rb:769:in `migration'
/home/nitrous/piggybank/.bundle/gems/activerecord-4.2.3/lib/active_record/migration.rb:764:in `disable_ddl_transaction'
/home/nitrous/piggybank/.bundle/gems/activerecord-4.2.3/lib/active_record/migration.rb:1047:in `use_transaction?'
/home/nitrous/piggybank/.bundle/gems/activerecord-4.2.3/lib/active_record/migration.rb:1039:in `ddl_transaction'
/home/nitrous/piggybank/.bundle/gems/activerecord-4.2.3/lib/active_record/migration.rb:993:in `execute_migration_in_transaction'
/home/nitrous/piggybank/.bundle/gems/activerecord-4.2.3/lib/active_record/migration.rb:955:in `block in migrate'
/home/nitrous/piggybank/.bundle/gems/activerecord-4.2.3/lib/active_record/migration.rb:951:in `each'
/home/nitrous/piggybank/.bundle/gems/activerecord-4.2.3/lib/active_record/migration.rb:951:in `migrate'
/home/nitrous/piggybank/.bundle/gems/activerecord-4.2.3/lib/active_record/migration.rb:819:in `up'
/home/nitrous/piggybank/.bundle/gems/activerecord-4.2.3/lib/active_record/migration.rb:797:in `migrate'
/home/nitrous/piggybank/.bundle/gems/activerecord-4.2.3/lib/active_record/tasks/database_tasks.rb:137:in `migrate'
/home/nitrous/piggybank/.bundle/gems/activerecord-4.2.3/lib/active_record/railties/databases.rake:44:in `block (2 levels) in <top (required)>'
.bundle/binstubs/rake:16:in `load'
.bundle/binstubs/rake:16:in `<main>'
Tasks: TOP => db:migrate
(See full trace by running task with --trace)
